{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1076,
  "lineage": "4dc25a3a-8a03-4298-6914-e2689d9e94c2",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:security-group/sg-092966734d16a6431",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-092966734d16a6431",
            "ingress": [],
            "name": "ingress-task-cluster-cluster-20251024120642345800000011",
            "name_prefix": "ingress-task-cluster-cluster-",
            "owner_id": "437473173423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ingress-task-cluster-cluster"
            },
            "tags_all": {
              "Name": "ingress-task-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:security-group/sg-0edda70a419603e8d",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0edda70a419603e8d",
            "ingress": [],
            "name": "ingress-task-cluster-node-20251024120642062100000010",
            "name_prefix": "ingress-task-cluster-node-",
            "owner_id": "437473173423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ingress-task-cluster-node",
              "kubernetes.io/cluster/ingress-task-cluster": "owned"
            },
            "tags_all": {
              "Name": "ingress-task-cluster-node",
              "kubernetes.io/cluster/ingress-task-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-40093960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-092966734d16a6431",
            "security_group_rule_id": "sgr-07436b80897a73244",
            "self": false,
            "source_security_group_id": "sg-0edda70a419603e8d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-453619685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-0f64b02b335a699d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3444732329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-04c01fce19a1a0e65",
            "self": false,
            "source_security_group_id": "sg-092966734d16a6431",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3502911616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-0a2fa9b5899c4519f",
            "self": false,
            "source_security_group_id": "sg-092966734d16a6431",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-428365590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-03b375607152adb79",
            "self": false,
            "source_security_group_id": "sg-092966734d16a6431",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-181693239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-090b64daa9a2ac5a1",
            "self": false,
            "source_security_group_id": "sg-092966734d16a6431",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1853184252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-0cdadd633c5914a3e",
            "self": false,
            "source_security_group_id": "sg-092966734d16a6431",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-774968443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-0c9d64d1a18b93d0f",
            "self": false,
            "source_security_group_id": "sg-092966734d16a6431",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-261544495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-02e49f2f82fcdedd8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1659909504",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-029104562d2012326",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3333396079",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0edda70a419603e8d",
            "security_group_rule_id": "sgr-0626ef689043a8744",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0128784097dd9a832",
            "arn": "arn:aws:ec2:eu-north-1:437473173423:elastic-ip/eipalloc-0128784097dd9a832",
            "domain": "vpc",
            "id": "eipalloc-0128784097dd9a832",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-56-228-74-68.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.74.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ingress-task-nat-eip-eu-north-1a"
            },
            "tags_all": {
              "Name": "ingress-task-nat-eip-eu-north-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:internet-gateway/igw-09ab8109bbfb70457",
            "id": "igw-09ab8109bbfb70457",
            "owner_id": "437473173423",
            "tags": {
              "Name": "ingress-task-igw"
            },
            "tags_all": {
              "Name": "ingress-task-igw"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0128784097dd9a832",
            "association_id": "eipassoc-068130a89f4abdaa0",
            "connectivity_type": "public",
            "id": "nat-014dc2ed8984cb56b",
            "network_interface_id": "eni-0cf2976edff7ebd01",
            "private_ip": "10.0.1.115",
            "public_ip": "56.228.74.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b7b85da9cd360a5d",
            "tags": {
              "Name": "ingress-task-nat-gw-eu-north-1a"
            },
            "tags_all": {
              "Name": "ingress-task-nat-gw-eu-north-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02beaaa109d383ab21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-014dc2ed8984cb56b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02beaaa109d383ab2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09ab8109bbfb70457",
            "id": "r-rtb-03cd94be09c98f2f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03cd94be09c98f2f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:route-table/rtb-02beaaa109d383ab2",
            "id": "rtb-02beaaa109d383ab2",
            "owner_id": "437473173423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ingress-task-private-rt"
            },
            "tags_all": {
              "Name": "ingress-task-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:route-table/rtb-03cd94be09c98f2f3",
            "id": "rtb-03cd94be09c98f2f3",
            "owner_id": "437473173423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ingress-task-public-rt"
            },
            "tags_all": {
              "Name": "ingress-task-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b3b52cafb28402c",
            "route_table_id": "rtb-02beaaa109d383ab2",
            "subnet_id": "subnet-0b22ede598943db88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04689ba47a5883ba1",
            "route_table_id": "rtb-02beaaa109d383ab2",
            "subnet_id": "subnet-09488061e7f92e669"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb3d25c397f90ed4",
            "route_table_id": "rtb-02beaaa109d383ab2",
            "subnet_id": "subnet-00da6d2c4f9d568a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf6f223bf1f1110d",
            "route_table_id": "rtb-03cd94be09c98f2f3",
            "subnet_id": "subnet-0b7b85da9cd360a5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0755c51f71285cb5f",
            "route_table_id": "rtb-03cd94be09c98f2f3",
            "subnet_id": "subnet-09d9386b6f1800bc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eaa917076193fad",
            "route_table_id": "rtb-03cd94be09c98f2f3",
            "subnet_id": "subnet-02f13f53a03bb0320"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-0b22ede598943db88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b22ede598943db88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-private-subnet-eu-north-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-private-subnet-eu-north-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-09488061e7f92e669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09488061e7f92e669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-private-subnet-eu-north-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-private-subnet-eu-north-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-00da6d2c4f9d568a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00da6d2c4f9d568a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-private-subnet-eu-north-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-private-subnet-eu-north-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-0b7b85da9cd360a5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7b85da9cd360a5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-public-subnet-eu-north-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-public-subnet-eu-north-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-09d9386b6f1800bc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d9386b6f1800bc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-public-subnet-eu-north-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-public-subnet-eu-north-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-02f13f53a03bb0320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f13f53a03bb0320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-public-subnet-eu-north-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-public-subnet-eu-north-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-071bee4c9217fd6d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:vpc/vpc-071bee4c9217fd6d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096971f0765bad0e9",
            "default_route_table_id": "rtb-09e36b3a218eb84a4",
            "default_security_group_id": "sg-033f8aa2c1d3c9177",
            "dhcp_options_id": "dopt-0a3764a584754c7ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071bee4c9217fd6d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e36b3a218eb84a4",
            "owner_id": "437473173423",
            "tags": {
              "Name": "ingress-task-vpc"
            },
            "tags_all": {
              "Name": "ingress-task-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}